crates/toml_edit/tests/snapshots/invalid/local-time/time-no-leads-01.stderr
TOML parse error at line 2, column 5
  |
2 | d = 1:32:00
  |     ^^^^^^^
invalid time, expected a two-digit hour (HH)
